# ML-MLOps-Production-template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  QUICK_START.md  README.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  llms.txt  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
docs/: ADOPTION.md  environment-promotion.md  ide-parity-audit.md
ops/: audit.jsonl
releases/: v1.0.0.md  v1.1.0.md  v1.12.0.md  v1.2.0.md  v1.3.0.md  v1.7.1.md  v1.8.0.md  v1.9.0.md
scripts/: audit_record.py  bootstrap.sh  test_scaffold.sh  validate_agentic.py  validate_quality_gates.py
templates/: .env.example  .gitleaks.toml  .pre-commit-config.yaml  Makefile  docker-compose.demo.yml
templates/service/: Dockerfile  codecov.yml  dvc.yaml  pyproject.toml  requirements.txt
templates/service/.dvc/: config
templates/service/app/: _pandera_schema.py  fastapi_app.py  main.py
templates/service/configs/: quality_gates.schema.json  quality_gates.yaml
templates/service/docs/: correlation-ids.md
templates/service/scripts/: benchmark_executor.py
templates/service/src/{service}/: config.py  schemas.py
templates/service/src/{service}/monitoring/: drift_detection.py
templates/service/src/{service}/training/: promote_to_mlflow.py  train.py
templates/service/tests/: conftest.py  test_adoption_boundary_contract.py  test_alert_routing_contract.py  test_api.py  test_auth.py  test_ci_autofix_policy_contract.py  test_error_envelope.py  test_evidence_bundle.py  test_explainer.py  test_iam_least_privilege.py  test_input_validation.py  test_k8s_name_vocabulary.py  test_metrics_contract.py  test_promote_evidence_gate.py  test_quality_gates_schema_sync.py  test_split_strategies.py  test_training.py  test_training_manifest.py
templates/service/tests/contract/: test_openapi_snapshot.py  test_schema_evolution.py
templates/service/tests/policy/: __init__.py  conftest.py  test_anti_patterns.py  test_smoke.py
(+178 files in other folders)
